# MiniCodingCompetition

./: .gitignore  README.md  mainDataConv.py  pyproject.toml
data/: mainData.csv  universities.csv
minicodingcompetition/: log_helpers.py  main.py  parse_data.py
