[tool.poetry]
name = "minicodingcompetition"
version = "0.1.0"
description = ""
authors = ["Weaver Goldman <we.goldm@gmail.com>"]
readme = "README.md"
packages = [{include = "minicodingcompetition"}]

[tool.poetry.dependencies]
python = "^3.9"
streamlit = "^1.17.0"
pandas = "^1.5.3"
plotly = "^5.17.0"


[tool.poetry.group.dev.dependencies]
black = {version = "^23.1.0", allow-prereleases = true}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
